# claude-code-dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  data.py  events.py  filters.py  models.py  routes.py  terminal.py
app/static/css/: main.css
app/static/js/: main.js  terminal.js
app/templates/: base.html  index.html  session.html  stats.html  terminal.html
app/templates/partials/: message.html  nav.html  search_results.html  session_card.html
