[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-dashboard"
version = "0.1.0"
description = "Local web dashboard for browsing and managing Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
claude-code-dashboard = "run:main"
